--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "githooks",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saulocastillos.github.io/git-hooks/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
