--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "styled-components": "^4.4.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
